...
  <string name="TestResults_Overview_NoTestsHaveBeenRun">No tests have been run yet. Try running one!</string>
  <string name="TestResults_Overview_Websites_Blocked_Singular">%1$s blocked</string>
  <string name="TestResults_Overview_Websites_Blocked_Plural">%1$s blocked</string>
  <string name="TestResults_Overview_Websites_Tested_Singular">%1$s tested</string>
  <string name="TestResults_Overview_Websites_Tested_Plural">%1$s tested</string>
  <string name="TestResults_Overview_MiddleBoxes_Found">Detected</string>
  <string name="TestResults_Overview_MiddleBoxes_NotFound">Not detected</string>
  <string name="TestResults_Overview_MiddleBoxes_Failed">Failed</string>
  <string name="TestResults_Overview_InstantMessaging_Blocked_Singular">%1$s blocked</string>
  <string name="TestResults_Overview_InstantMessaging_Blocked_Plural">%1$s blocked</string>
  <string name="TestResults_Overview_InstantMessaging_Available_Singular">%1$s accessible</string>
  <string name="TestResults_Overview_InstantMessaging_Available_Plural">%1$s accessible</string>
  <string name="TestResults_Overview_Circumvention_Blocked_Singular">%1$s blocked</string>
...
  <string name="TestResults_Details_InstantMessaging_FacebookMessenger_LikelyBlocked_Hero_Title">Likely blocked</string>
  <string name="TestResults_Details_InstantMessaging_FacebookMessenger_LikelyBlocked_Content_Paragraph">Facebook Messenger appears to be blocked.</string>
  <string name="TestResults_Details_InstantMessaging_Signal_LikelyBlocked_Hero_Title">Likely blocked</string>
  <string name="TestResults_Details_InstantMessaging_Signal_LikelyBlocked_Content_Paragraph">Signal appears to be blocked.</string>
  <string name="TestResults_Details_InstantMessaging_Signal_Reachable_Hero_Title">Working</string>
  <string name="TestResults_Details_InstantMessaging_Signal_Reachable_Content_Paragraph">This test successfully connected to Signal\'s endpoints.</string>
  <string name="TestResults_Details_Middleboxes_HTTPInvalidRequestLine_NotFound_Hero_Title">No middleboxes detected</string>
  <string name="TestResults_Details_Middleboxes_HTTPInvalidRequestLine_NotFound_Content_Paragraph">No network anomaly was detected when communicating with our servers.</string>
  <string name="TestResults_Details_Middleboxes_HTTPInvalidRequestLine_Found_Hero_Title">Network tampering</string>
  <string name="TestResults_Details_Middleboxes_HTTPInvalidRequestLine_Found_Content_Paragraph">Network traffic was manipulated when contacting our control servers.\n\nThis means that there may be a middlebox in your network, which could be responsible for censorship and/or surveillance.</string>
  <string name="TestResults_Details_Middleboxes_HTTPHeaderFieldManipulation_NotFound_Hero_Title">No middleboxes detected</string>
  <string name="TestResults_Details_Middleboxes_HTTPHeaderFieldManipulation_NotFound_Content_Paragraph">No network anomaly was detected when communicating with our servers.</string>
  <string name="TestResults_Details_Middleboxes_HTTPHeaderFieldManipulation_Found_Hero_Title">Network tampering</string>
  <string name="TestResults_Details_Middleboxes_HTTPHeaderFieldManipulation_Found_Content_Paragraph">Network traffic was manipulated when contacting our control servers.\n\nThis means that there may be a middlebox in your network, which could be responsible for censorship and/or surveillance.</string>
  <string name="TestResults_Details_Middleboxes_HTTPInvalidRequestLine_YouSent">You Sent</string>
  <string name="TestResults_Details_Middleboxes_HTTPInvalidRequestLine_YouReceived">You Received</string>
  <string name="TestResults_Details_Performance_NDT_Upload">Upload</string>
  <string name="TestResults_Details_Performance_NDT_Download">Download</string>
  <string name="TestResults_Details_Performance_NDT_Ping">Ping</string>
...
