<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<android.support.design.widget.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

		<android.support.v7.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize" />

		<android.support.design.widget.TabLayout
			android:id="@+id/tabLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:tabGravity="center"
			app:tabIndicatorColor="@color/color_white" />

		<android.support.v4.view.ViewPager
			android:id="@+id/pager"
			android:layout_width="match_parent"
			android:layout_height="128dp" />
	</android.support.design.widget.AppBarLayout>

	<android.support.v7.widget.RecyclerView
		android:id="@+id/recyclerView"
		android:layout_width="match_parent"
		android:layout_height="match_parent" />
</LinearLayout>