...
                    <include
                        android:id="@+id/expired_tag"
                        layout="@layout/expired_tag"
                        android:visibility="gone"/>

                    <Button
                        android:id="@+id/customUrl"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Dashboard_Overview_ChooseWebsites"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
...
